[gd_scene load_steps=2 format=3 uid="uid://dcqgmv1r58w2r"]

[ext_resource type="Script" uid="uid://d1avjmcr6x8py" path="res://kb.gd" id="1_8bvf8"]

[node name="KB" type="Area2D"]
script = ExtResource("1_8bvf8")

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
